Wed Sep  1 15:20:35 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/htsearch.cc(main): Allow multiple keywords input
	parameters in search forms.

	* htdig/Document.cc(Reset, readHeader): Fix the bug in the handling
	of modification_time_is_now.

	* htfuzzy/Fuzzy.cc(getWords), htfuzzy/Metaphone.cc(vscode,generateKey):
	Should fix PR#514 in the bug database.  It's Geoff's first patch,
	with a minor correction, plus an added test in the vscode macro,
	which is where the problem seemed to be happening.  This won't
	map accented vowels to their unaccented counterparts, but
	it should hopefully put an end to the segmentation faults.

	* include/htconfig.h.in, htcommon/WordReference.h,
	htcommon/WordList.cc(Word, Flush, BadWordFile),
	htcommon/DocumentRef.cc(AddDescription), htcommon/defaults.cc,
	htsearch/parser.cc(perform_push), htdoc/attrs.html,
	htdoc/cf_byname.html, htdoc/cf_byprog.html: Change the maximum word
	length into a run-time option, rather than compile-time.

	* htsearch/Display.cc(displayMatch): Applied Torsten Neuer's
	<tneuer@inwise.de> fix for PR#554.

	* htdig/HTML.cc(HTML, do_tag): Added support for <embed>, <object>
	and <link> tags.

	* htdig/htdig.cc(main): Applied Geoff's patch to hide the
	username/password in the command line arguments.

	* htdig/Document.cc(readHeader): Fixed a few problems with header
	parsing, including PR#535 & PR#557.

	* htdig/Document.cc(getdate): This should help with PR#81 & PR#472,
	where strftime() would crash on some systems.  Idea submitted
	by benoit.sibaud@cnet.francetelecom.fr.

	* COPYING, htdoc/COPYING, Makefile.in: Updated the FSF address
	in COPYING & Makefile.in.  PR#595.

	* htdig/Retriever.cc(IsValidURL): Fix PR#493, to avoid rejecting
	a valid URL with ".." in it.

	* htlib/URL.cc(parse): Fix PR#348, to make sure a missing
	or invalid port number will get set correctly.

	* htsearch/Display.h, htsearch/Display.cc(excerpt): Fix declaration